# game_programming_in_cpp

./: CMakeLists.txt  Game.h
chapter_1/exercise_1.1/: Game.cpp  Game.h
chapter_1/exercise_1.2/: Game.cpp  Game.h  main.cpp
chapter_1/original/: Game.cpp  Game.h
chapter_2/exercise_2.1/: Actor.cpp  Actor.h  Animal.cpp  Animal.h  Bear.cpp  Bear.h  CMakeLists.txt  Car.cpp  Car.h  Game.cpp  Game.h  Hippo.cpp  Hippo.h  Narwhal.cpp  Narwhal.h  Penguin.cpp  Penguin.h  Pig.cpp  Pig.h  Walrus.cpp  Walrus.h  main.cpp
chapter_2/original/: Actor.cpp  Actor.h  AnimSpriteComponent.cpp  AnimSpriteComponent.h  AnimationSpriteComponent.cpp  AnimationSpriteComponent.h  BGSpriteComponent.cpp  BGSpriteComponent.h  BackgroundSpriteComponent.cpp  BackgroundSpriteComponent.h  CMakeLists.txt  Component.cpp  Component.h  Game.cpp  Game.h  Ship.cpp  Ship.h  SpriteComponent.cpp  SpriteComponent.h  main.cpp
